# Grasp_Assuming_Symmetry

./: CMakeLists.txt  README.md  README.txt  bottle_pcd.pcd  common.cpp  finisher.cpp  latest.cpp  new_pcl.cpp  package.xml  paper.cpp  paper_new.cpp  pcd_works.cpp  pcl_code.cpp  resolver.cpp  test_pcd.pcd  test_pcd2.pcd  test_pcd3.pcd  test_pcd4.pcd  test_pcd5.pcd  view_cloud.cpp  workit.cpp
completedClouds/: cup1_pcd.pcd  mustardBottle1_pcd.pcd  puddingBox1_pcd.pcd  puddingBox2_pcd.pcd
src/: combine_pcd.cpp  example.cpp  grasp_demo.py  random_sample_consensus.cpp
